--- a/src/simple-ui/index.html
+++ b/src/simple-ui/index.html
@@ -102,7 +102,7 @@
         </section>
 
         <!-- Security Issues by Severity -->
-        <section id="securityIssues" class="security-issues hidden">
+        <section id="findings" class="findings hidden">
             <h2>🚨 Security Issues</h2>
             <div id="issueGroups"></div>
         </section>
