--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -29,8 +29,8 @@
                 <label for="repoUrl">Repository URL:</label>
                 <input type="text" id="repoUrl" placeholder="https://github.com/user/repository" value="">
                 <div class="button-group">
-                    <button id="scanBtn" onclick="scanRepository()">🔍 Scan Repository</button>
-                    <button id="forceScanBtn" onclick="forceScanRepository()">⚡ Force Scan</button>
+                                <button id="scanBtn" onclick="scanRepository()">Scan Repository</button>
+            <button id="forceScanBtn" onclick="forceScanRepository()">Force Scan</button>
                 </div>
             </div>
         </section>
@@ -103,7 +103,7 @@
 
         <!-- Security Issues by Severity -->
         <section id="securityIssues" class="security-issues hidden">
-            <h2>🚨 Security Issues</h2>
+            <h2>Security Issues</h2>
             <div id="issueGroups"></div>
         </section>
 
